Fix brand store side nav overlapping global nav

--- a/static/sass/_snapcraft_l-application.scss
+++ b/static/sass/_snapcraft_l-application.scss
@@ -51,7 +51,7 @@
     height: $layout-height;
     position: absolute;
     top: auto;
-    z-index: 100;
+    z-index: 99;
 
     @media (min-width: $application-layout--breakpoint-side-nav-expanded) {
       position: static;
